--- a/css/temp.css
+++ b/css/temp.css
@@ -1,22 +1,3 @@
-li {
-    list-style: none;
-    margin-bottom: 20px;
-}
-
-form ul {
-    padding-left: 0px;
-}
-
-label {
-    display: block;
-    cursor: pointer;
-    color: #292929;
-    font-family: sans-serif;
-    padding-bottom: 8px;
-}
-
-textarea {
-    resize: none;
-    width: 400px;
-    height: 300px;
+ul{
+ 
 }
